--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
-    "python.linting.pylintArgs": [
-        "--load-plugins=pylint_django",
-        "--django-settings-module=deshawnproject.settings",
-    ]
+    "python.formatting.autopep8Path": "paste in the output from the which command",
+    "python.linting.pylintEnabled": true,
+    "python.analysis.diagnosticSeverityOverrides": {
+      "reportGeneralTypeIssues": "none"
+    },
+    "files.exclude": {
+     "**/__pycache__": true
+   },
 }
-
